kubernetes/argocd/applicationset/argocd-applicationset-controller-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: argocd-applicationset-controller
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: applicationset-controller
  name: argocd-applicationset-controller-network-policy
  namespace: argocd
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-applicationset-controller
  ingress:
    - from:
        - namespaceSelector: { }
      ports:
        - protocol: TCP
          port: 7000
        - protocol: TCP
          port: 8080
  policyTypes:
  - Ingress
